--- a/infinity-pres.html
+++ b/infinity-pres.html
@@ -46,9 +46,9 @@
             <img src="images/proj-pres4.jpg" class=ppt alt="" width=500px height=300px>
             </div>  
 
-            <div class="flexbox-project-item flexbox-project-item-10"> 
+            <!-- <div class="flexbox-project-item flexbox-project-item-10"> 
             <img src="images/proj-pres5.jpg" class=ppt alt="" width=500px height=300px>
-            </div>  
+            </div>   -->
 
             <div class="flexbox-project-item flexbox-project-item-10"> 
             <img src="images/proj-pres6.jpg" class=ppt alt="" width=500px height=300px>
@@ -58,9 +58,9 @@
             <img src="images/proj-pres7.jpg" class=ppt alt="" width=500px height=300px>
             </div>  
 
-            <div class="flexbox-project-item flexbox-project-item-10"> 
+            <!-- <div class="flexbox-project-item flexbox-project-item-10"> 
             <img src="images/proj-pres8.jpg" class=ppt alt="" width=500px height=300px>
-            </div> 
+            </div>  -->
 
         </div>
     
