--- a/helping-hand.html
+++ b/helping-hand.html
@@ -64,9 +64,9 @@
               <img src="images/proj-helpinghand8.jpg" alt="" class="image" width=350px height=350px>  
               </div>
 
-            <div class="flexbox-project-item flexbox-project-item-2">
+            <!-- <div class="flexbox-project-item flexbox-project-item-2">
                 <img src="images/proj-helpinghand10.jpg" alt="" class="image" width=350px height=350px>  
-                </div>
+                </div> -->
 
             <!-- <div class="flexbox-project-item flexbox-project-item-2"> 
                 <img src="images/extra.jpg" alt="" class="image" width=350px height=350px>
