--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 </div>
               </div>
 
-              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+              <!-- <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="images/proj-9-hero.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
                     <a href="project-f1.html" target="_blank" class="portfolio-link-text">CONCEPT LEARNING OPPORTUNITY / F1</a> 
                 </div>
-              </div>
+              </div> -->
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="images/proj-helpinghand.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
@@ -127,15 +127,14 @@
                 </div>
               </div>
 
-              <!-- <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
-                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="" target="_blank" class="portfolio-link-text">DJANGO REST FRAMEWORK / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE BACKEND</a> 
-                </div>
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/opt-in.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                      <a href="https://www.figma.com/file/BkpiKlmqxSCID6V5viWiSD/Opt-in?node-id=0%3A1" target="_blank" class="portfolio-link-text">UI UX / SHOPPING COMPARSION SITE / STUDENT PROJECT</a> 
               </div>
 
-              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
-                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="" target="_blank" class="portfolio-link-text">REACT / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE FRONTEND</a>  -->
+
+
+                    </div>
                 </div>
               </div> 
 
