--- a/project-4.html
+++ b/project-4.html
@@ -57,9 +57,9 @@
               <img src="images/proj-4-brand-m-9.jpg" alt="" class="image" width=350px height=350px>
               </div>
               
-              <div class="flexbox-project-item flexbox-project-item-7">
+              <!-- <div class="flexbox-project-item flexbox-project-item-7">
               <img src="images/proj-4-brand-m-10.jpg" alt="" class="image" width=350px height=350px>
-              </div>
+              </div> -->
 
         </div>
     
